--- a/Clean_companies.ipynb
+++ b/Clean_companies.ipynb
@@ -770,7 +770,7 @@
     }
    ],
    "source": [
-    "# Creo un nuevo DataFrame germany agregando las columnas anteriores al anterior DataFrame less-columns\n",
+    "# Creo un nuevo DataFrame 'germany' agregando las columnas anteriores 'location' al anterior DataFrame 'less-columns'\n",
     "\n",
     "germany = pd.concat([less_columns,location], axis=1)[[\"name\",\"city\",\"offices\",\"geo\",\"lat\",\"lng\",\"total_money_raised\",\"founded_year\",\"number_of_employees\",\"category_code\",\"description\",\"overview\",\"tag_list\"]]\n",
     "germany.head(3)\n"
